Allow test-only access to engine store-type bridge